--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "movies-vodo",
   "version": "0.1.0",
+  "homepage": "https://xmkabel.github.io/vodo-internship-task",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "movies-vodo -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
